@startuml dataBaseScheme
skinparam Linetype ortho

entity MONSTER{
    *name : text <PK>
}
entity SYNTH_PROPERTY{
    *id_property : integer <generated>
    --
    *rank_type : text not null
    *synth_type : text not null
    *prop_value : integer not null
}
entity MONSTER_COUPLE{
    *id_couple : integer <generated>
    --
    *name_monster1 : text not null <FK>
    *name_monster2 : text not null <FK>
    *level_monster1 : text
    *level_monster2 : text
}
entity SYNTHESIS{
    *id_synth : integer <generated>
    --
    *id_first_couple : integer not null <FK>
    *id_second_couple : integer <FK>
    *id_property : integer not null <FK>
    *number_of_parents : integer not null
    *son_name : text not null <FK>
}


SYNTHESIS "1"-->"1..2" MONSTER_COUPLE
SYNTHESIS "1"-->"1" SYNTH_PROPERTY
MONSTER_COUPLE "1"-->"2" MONSTER 
MONSTER "1"-->"*" SYNTHESIS

@enduml